--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,15 +25,10 @@
   <meta name="twitter:description" content="利用AI技术为您生成系统化的学习文章和文档，助力高效学习。">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path fill='%234F46E5' d='M12 2L2 7l10 5 10-5-10-5z'/><path stroke='%236366F1' stroke-width='2' fill='none' d='M2 17l10 5 10-5M2 12l10 5 10-5'/></svg>">
+  <link rel="icon" href="data:,">
   
-  <!-- Preconnect -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Fonts loaded via CSS -->
   
-  <!-- Canonical URL -->
-  <link rel="canonical" href="/">
   
   <!-- Structured Data -->
   <script type="application/ld+json">
